--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -16,29 +16,31 @@ dataSources:
       apiVersion: 0.0.9
       language: wasm/assemblyscript
       entities:
-        - Compound
-        - Deposit
         - NewBunni
-        - OwnerUpdated
-        - PayProtocolFee
-        - SetProtocolFee
-        - Withdraw
       abis:
         - name: BunniHub
           file: ./abis/BunniHub.json
       eventHandlers:
-        - event: Compound(indexed address,indexed bytes32,uint128,uint256,uint256)
-          handler: handleCompound
-        - event: Deposit(indexed address,indexed address,indexed bytes32,uint128,uint256,uint256,uint256)
-          handler: handleDeposit
         - event: NewBunni(indexed address,indexed bytes32,indexed address,int24,int24)
           handler: handleNewBunni
-        - event: OwnerUpdated(indexed address,indexed address)
-          handler: handleOwnerUpdated
-        - event: PayProtocolFee(uint256,uint256)
-          handler: handlePayProtocolFee
-        - event: SetProtocolFee(uint256)
-          handler: handleSetProtocolFee
-        - event: Withdraw(indexed address,indexed address,indexed bytes32,uint128,uint256,uint256,uint256)
-          handler: handleWithdraw
       file: ./src/bunni-hub.ts
+templates:
+  - name: BunniLpToken
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      abi: ERC20
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.9
+      language: wasm/assemblyscript
+      entities: []
+      abis:
+        - name: ERC20
+          file: ./abis/erc20.json
+        - name: Pool
+          file: ./abis/Pool.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/transfer.ts
